implemented redux thunk functionality

--- a/src/index.scss
+++ b/src/index.scss
@@ -336,7 +336,7 @@ select > button {
     border: 1px solid white;
 
     &:hover {
-      background: white;
+      background: $custom-orange;
     }
   }
 }
